{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 17,
  "lineage": "cda9c018-987b-4a7d-d9dd-6e61b01bdbd5",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c1f788292172a4e",
            "arn": "arn:aws:ec2:us-west-2:975050024946:instance/i-001493a0d215db63a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "DBServerInstanceProfile",
            "id": "i-001493a0d215db63a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pranshu_k",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0148047aee666bd22"
              }
            ],
            "primary_network_interface_id": "eni-0148047aee666bd22",
            "private_dns": "ip-172-31-66-174.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.66.174",
            "public_dns": "ec2-34-221-109-77.us-west-2.compute.amazonaws.com",
            "public_ip": "34.221.109.77",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-079deeea759d4e94f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "db-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070f725d5ab66cbef",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "MongoDB-Database-Server",
              "Project": "TravelMemory",
              "Type": "DatabaseServer"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "MongoDB-Database-Server",
              "Project": "TravelMemory",
              "Type": "DatabaseServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09470556902ac3fc4"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.db_server",
            "module.ec2.data.aws_ami.ubuntu",
            "module.iam.aws_iam_instance_profile.db_server",
            "module.iam.aws_iam_instance_profile.web_server",
            "module.iam.aws_iam_role.db_server_role",
            "module.iam.aws_iam_role.web_server_role",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_full",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_full",
            "module.iam.data.aws_iam_policy.cloudwatch_agent_server_policy",
            "module.iam.data.aws_iam_policy.cloudwatch_full_access",
            "module.iam.data.aws_iam_policy_document.ec2_instance_connect",
            "module.vpc.data.aws_internet_gateway.default",
            "module.vpc.data.aws_route_table.default",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_subnets.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-03c1f788292172a4e",
            "arn": "arn:aws:ec2:us-west-2:975050024946:instance/i-089861b82ce7238b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "WebServerInstanceProfile",
            "id": "i-089861b82ce7238b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pranshu_k",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-074d0ac09cb5406cc"
              }
            ],
            "primary_network_interface_id": "eni-074d0ac09cb5406cc",
            "private_dns": "ip-172-31-71-243.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.71.243",
            "public_dns": "ec2-54-212-109-154.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.109.154",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055868107a868173c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "web-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070f725d5ab66cbef",
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "MERN-Web-Server",
              "Project": "TravelMemory",
              "Type": "WebServer"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "MERN-Web-Server",
              "Project": "TravelMemory",
              "Type": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b1a424b7f043e4f"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_server",
            "module.ec2.data.aws_ami.ubuntu",
            "module.iam.aws_iam_instance_profile.db_server",
            "module.iam.aws_iam_instance_profile.web_server",
            "module.iam.aws_iam_role.db_server_role",
            "module.iam.aws_iam_role.web_server_role",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_full",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_full",
            "module.iam.data.aws_iam_policy.cloudwatch_agent_server_policy",
            "module.iam.data.aws_iam_policy.cloudwatch_full_access",
            "module.iam.data.aws_iam_policy_document.ec2_instance_connect",
            "module.vpc.data.aws_internet_gateway.default",
            "module.vpc.data.aws_route_table.default",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_subnets.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:security-group/sg-09470556902ac3fc4",
            "description": "Security group for MongoDB database server - allows SSH and MongoDB port from web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09470556902ac3fc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07b1a424b7f043e4f"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "db-server-sg",
            "name_prefix": "",
            "owner_id": "975050024946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "DB-Server-Security-Group",
              "Project": "TravelMemory"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "DB-Server-Security-Group",
              "Project": "TravelMemory"
            },
            "timeouts": null,
            "vpc_id": "vpc-0321f38a7b594180d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.web_server",
            "module.iam.aws_iam_instance_profile.db_server",
            "module.iam.aws_iam_instance_profile.web_server",
            "module.iam.aws_iam_role.db_server_role",
            "module.iam.aws_iam_role.web_server_role",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_full",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_full",
            "module.iam.data.aws_iam_policy.cloudwatch_agent_server_policy",
            "module.iam.data.aws_iam_policy.cloudwatch_full_access",
            "module.iam.data.aws_iam_policy_document.ec2_instance_connect",
            "module.vpc.data.aws_internet_gateway.default",
            "module.vpc.data.aws_route_table.default",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_subnets.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:security-group/sg-07b1a424b7f043e4f",
            "description": "Security group for MERN web server - allows HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b1a424b7f043e4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg",
            "name_prefix": "",
            "owner_id": "975050024946",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "Web-Server-Security-Group",
              "Project": "TravelMemory"
            },
            "tags_all": {
              "Environment": "Production",
              "ManagedBy": "Terraform",
              "Name": "Web-Server-Security-Group",
              "Project": "TravelMemory"
            },
            "timeouts": null,
            "vpc_id": "vpc-0321f38a7b594180d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.iam.aws_iam_instance_profile.db_server",
            "module.iam.aws_iam_instance_profile.web_server",
            "module.iam.aws_iam_role.db_server_role",
            "module.iam.aws_iam_role.web_server_role",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.db_server_cloudwatch_full",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_agent",
            "module.iam.aws_iam_role_policy_attachment.web_server_cloudwatch_full",
            "module.iam.data.aws_iam_policy.cloudwatch_agent_server_policy",
            "module.iam.data.aws_iam_policy.cloudwatch_full_access",
            "module.iam.data.aws_iam_policy_document.ec2_instance_connect",
            "module.vpc.data.aws_internet_gateway.default",
            "module.vpc.data.aws_route_table.default",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_subnets.default",
            "module.vpc.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:internet-gateway/igw-0081d676b1ae3829b",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0321f38a7b594180d"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0321f38a7b594180d"
                ]
              }
            ],
            "id": "igw-0081d676b1ae3829b",
            "internet_gateway_id": "igw-0081d676b1ae3829b",
            "owner_id": "975050024946",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:route-table/rtb-073c8dfa25a887a16",
            "associations": [
              {
                "gateway_id": "",
                "main": true,
                "route_table_association_id": "rtbassoc-00b6da083a927c003",
                "route_table_id": "rtb-073c8dfa25a887a16",
                "subnet_id": ""
              }
            ],
            "filter": [
              {
                "name": "association.main",
                "values": [
                  "true"
                ]
              }
            ],
            "gateway_id": null,
            "id": "rtb-073c8dfa25a887a16",
            "owner_id": "975050024946",
            "region": "us-west-2",
            "route_table_id": "rtb-073c8dfa25a887a16",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0081d676b1ae3829b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "private-route-table "
            },
            "timeouts": null,
            "vpc_id": "vpc-0321f38a7b594180d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:subnet/subnet-070f725d5ab66cbef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.64.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070f725d5ab66cbef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0321f38a7b594180d"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:subnet/subnet-03ca36de9a927fe8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca36de9a927fe8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0321f38a7b594180d"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:subnet/subnet-06bd72b2e4cb41d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 4055,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bd72b2e4cb41d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0321f38a7b594180d"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:subnet/subnet-00803467e37d6855f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "available_ip_address_count": 247,
            "cidr_block": "172.31.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00803467e37d6855f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "mern-subnet2"
            },
            "vpc_id": "vpc-0321f38a7b594180d"
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:subnet/subnet-0b5707f3d78e1c9be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "available_ip_address_count": 251,
            "cidr_block": "172.31.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5707f3d78e1c9be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "mern-subnet1"
            },
            "vpc_id": "vpc-0321f38a7b594180d"
          }
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:subnet/subnet-09bd0e0acc92d4efa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "available_ip_address_count": 4087,
            "cidr_block": "172.31.48.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bd0e0acc92d4efa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0321f38a7b594180d"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:975050024946:vpc/vpc-0321f38a7b594180d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00045d07c1afeb107",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0182df0df006bd917",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0321f38a7b594180d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-073c8dfa25a887a16",
            "owner_id": "975050024946",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}